--- a/package.json
+++ b/package.json
@@ -1,23 +1,34 @@
 {
-  "name": "abrahamserafino.com",
+  "name": "book-list",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "database:create": "./docker-start.sh",
+    "database:delete": "./docker-delete.sh"
   },
   "dependencies": {
+    "@apollo/server": "^4.10.2",
+    "@as-integrations/next": "^3.0.0",
+    "axios": "^1.6.8",
+    "clsx": "^2.1.0",
+    "graphql": "^16.8.1",
+    "graphql-request": "^6.1.0",
+    "mongodb": "^6.5.0",
+    "next": "14.1.4",
+    "prettier": "^3.2.5",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.4"
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
     "eslint": "^8",
-    "eslint-config-next": "14.1.4"
+    "eslint-config-next": "14.1.4",
+    "postcss": "^8",
+    "tailwindcss": "^3.3.0"
   }
 }
